# Quikr

./: .replit  README.md  pyproject.toml  quikr.py
quikr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
